Add static website files

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Static Website</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 50px;
-      }
-      h1 {
-        color: #4caf50;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Welcome to My Static Website</h1>
-    <p>This website is hosted for free with GitHub Pages!</p>
+    <header>
+      <h1>Welcome to My Static Website</h1>
+      <p>Hosted for free with GitHub Pages!</p>
+    </header>
+
+    <section>
+      <h2>About This Site</h2>
+      <p>
+        This is a simple HTML static website hosted directly from a GitHub
+        repository.
+      </p>
+    </section>
+
+    <footer>
+      <p>© 2025 My Static Website. All rights reserved.</p>
+    </footer>
   </body>
 </html>
